# vm_measure

./: CMakeLists.txt  README.md  SearchForPhysAddr.md  TODO.md  evidence.txt  modules_init  settings.cmake  vm_measure.camkes  vm_multi.camkes  xaj
component/: introspect_component.c  mike_module.h  module_h_raw.h
component/sphlib/: CMakeLists.txt
components/MeasurementManager/: measurement_manager.c  measurement_manager.camkes  module_scanner.c  module_scanner.h  payload_utils.h  registered_digests.h
components/Measurer/: measurement_utils.h  measurer.c  registered_digests.h
components/ModuleAnalyzer/: digest_registry.h  measurement_utils.h  module_analyzer.c  module_analyzer.camkes
components/ModulesIntrospector/: CMakeLists.txt  modules_introspector.c  modules_introspector.camkes
components/ModulesIntrospector/OLD/: introspect_manager.c
components/VM/: my_vm.c
modules/: CMakeLists.txt
modules/connector/: Makefile  connector.c
modules/dataports/: Makefile  dataports.c
modules/good/: Makefile  good.c
modules/measure/: Makefile  measure.c
modules/measurement/: Makefile  measurement.c  sha.c
modules/poison/: poison.c
modules/print/: Makefile  print.c
modules/signal/: Makefile  signal.c
overlay_files/init_scripts/: cross_vm_module_init  introspect_dataport_init
qemu-arm-virt/: devices.camkes
src/: cross_vm_connections.c
vm_measure_wiki/: .HowItWorks.md.swp  FindingInternet.md  HowItWorks.md  MeasurementTodo.md  introspection_investigation.md  kernel-component-comms.md  question.md  rodata_mask.md  todo.md
